Sass Folder Structure

--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <title>Smart Helmet</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    
+<div data-placeholder="wrapper" data-placholder-status="active" >
+    <h1 data-placeholder="content" data-placeholder-type="fade-up">Content Placeholder</h1>
+</div>
+
+
+
+    <header id="header">
+
+
+
+    </header>
+
+
+
+
 </body>
 </html>
