Designed Header and Banner section

--- a/index.html
+++ b/index.html
@@ -8,21 +8,46 @@
     <title>Smart Helmet</title>
 </head>
 <body>
-    
+<!--     
 <div data-placeholder="wrapper" data-placholder-status="active" >
     <h1 data-placeholder="content" data-placeholder-type="fade-up">Content Placeholder</h1>
 </div>
-
+ -->
 
 
     <header id="header">
+<div class="header__left">
+    <a href="" class="link">Home</a>
+    <a href="" class="link">About</a>
+</div>
 
+<div class="header__logo">
+<a href="/"><img src="./img/logo.svg" alt="Logo" width="150px"></a>
+</div>
 
-
+<div class="header__right">
+    <a href="" class="link">Features</a>
+    <a href="" class="link">Contact</a>
+</div>
     </header>
 
 
+<main id="main">
+
+<section id="hero">
+<div class="video-wrapper"></div>
+
+<button class="button">
+<i class="fa fa-arrow-down"></i>
+</button>
 
 
+</section>
+
+</main>
+
+
+
+<script src="./js/all.min.js"></script>
 </body>
 </html>
