--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Georama:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Smart Helmet</title>
 </head>
 <body>
@@ -14,6 +17,7 @@
 </div>
  -->
 
+<section id="loader"></section>
 
     <header id="header">
 <div class="header__left">
@@ -35,7 +39,9 @@
 <main id="main">
 
 <section id="hero">
-<div class="video-wrapper"></div>
+<div class="video-wrapper">
+    <video muted loop  src="./Jon-Vieira-SmartHelmet (trim).mp4"></video>
+</div>
 
 <button class="button">
 <i class="fa fa-arrow-down"></i>
@@ -43,6 +49,121 @@
 
 
 </section>
+
+
+<section id="features">
+
+<div class="heading">
+    <h2>Features</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta autem molestiae consectetur eos quod temporibus reprehenderit nemo voluptatem iure rerum?</p>
+</div>
+
+
+
+<div class="features">
+
+<div class="feature">
+    <div class="feature-info">
+        <h2>Lorem, ipsum dolor.lorem2 Lorem, ipsum dolor.</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur nulla nisi maxime enim sint iste amet necessitatibus ullam autem, consequuntur, deserunt dolor corporis.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita quidem fugit quasi odio aliquid maxime enim ipsam, ducimus eligendi, eaque esse, quaerat nam sed amet quod vitae? Natus consequuntur ut tempora ratione eligendi corrupti quibusdam. Nemo, ut corporis deleniti fugit dicta magnam, suscipit illum earum distinctio necessitatibus quidem. Iure, veniam?
+        </p>
+    </div>
+
+
+
+    <div class="feature-img">
+        <video src="/Jon-Vieira-SmartHelmet (trim).mp4" width="1000"></video>
+    </div>
+</div>
+
+<div class="feature">
+    <div class="feature-info">
+        <h2>Lorem, ipsum dolor.lorem2 Lorem, ipsum dolor.</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur nulla nisi maxime enim sint iste amet necessitatibus ullam autem, consequuntur, deserunt dolor corporis.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita quidem fugit quasi odio aliquid maxime enim ipsam, ducimus eligendi, eaque esse, quaerat nam sed amet quod vitae? Natus consequuntur ut tempora ratione eligendi corrupti quibusdam. Nemo, ut corporis deleniti fugit dicta magnam, suscipit illum earum distinctio necessitatibus quidem. Iure, veniam?
+        </p>
+    </div>
+
+
+
+    <div class="feature-img">
+        <video src="/Jon-Vieira-SmartHelmet (trim).mp4" width="1000"></video>
+    </div>
+</div>
+
+<div class="feature">
+    <div class="feature-info">
+        <h2>Lorem, ipsum dolor.lorem2 Lorem, ipsum dolor.</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur nulla nisi maxime enim sint iste amet necessitatibus ullam autem, consequuntur, deserunt dolor corporis.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita quidem fugit quasi odio aliquid maxime enim ipsam, ducimus eligendi, eaque esse, quaerat nam sed amet quod vitae? Natus consequuntur ut tempora ratione eligendi corrupti quibusdam. Nemo, ut corporis deleniti fugit dicta magnam, suscipit illum earum distinctio necessitatibus quidem. Iure, veniam?
+        </p>
+    </div>
+
+
+
+    <div class="feature-img">
+        <video src="/Jon-Vieira-SmartHelmet (trim).mp4" width="1000"></video>
+    </div>
+</div>
+
+<div class="feature">
+    <div class="feature-info">
+        <h2>Lorem, ipsum dolor.lorem2 Lorem, ipsum dolor.</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur nulla nisi maxime enim sint iste amet necessitatibus ullam autem, consequuntur, deserunt dolor corporis.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita quidem fugit quasi odio aliquid maxime enim ipsam, ducimus eligendi, eaque esse, quaerat nam sed amet quod vitae? Natus consequuntur ut tempora ratione eligendi corrupti quibusdam. Nemo, ut corporis deleniti fugit dicta magnam, suscipit illum earum distinctio necessitatibus quidem. Iure, veniam?
+        </p>
+    </div>
+
+
+
+    <div class="feature-img">
+        <video src="/Jon-Vieira-SmartHelmet (trim).mp4" width="1000"></video>
+    </div>
+</div>
+
+<div class="feature">
+    <div class="feature-info">
+        <h2>Lorem, ipsum dolor.lorem2 Lorem, ipsum dolor.</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur nulla nisi maxime enim sint iste amet necessitatibus ullam autem, consequuntur, deserunt dolor corporis.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita quidem fugit quasi odio aliquid maxime enim ipsam, ducimus eligendi, eaque esse, quaerat nam sed amet quod vitae? Natus consequuntur ut tempora ratione eligendi corrupti quibusdam. Nemo, ut corporis deleniti fugit dicta magnam, suscipit illum earum distinctio necessitatibus quidem. Iure, veniam?
+        </p>
+    </div>
+
+
+
+    <div class="feature-img">
+        <video src="/Jon-Vieira-SmartHelmet (trim).mp4" width="1000"></video>
+    </div>
+</div>
+
+<div class="feature">
+    <div class="feature-info">
+        <h2>Lorem, ipsum dolor.lorem2 Lorem, ipsum dolor.</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur nulla nisi maxime enim sint iste amet necessitatibus ullam autem, consequuntur, deserunt dolor corporis.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita quidem fugit quasi odio aliquid maxime enim ipsam, ducimus eligendi, eaque esse, quaerat nam sed amet quod vitae? Natus consequuntur ut tempora ratione eligendi corrupti quibusdam. Nemo, ut corporis deleniti fugit dicta magnam, suscipit illum earum distinctio necessitatibus quidem. Iure, veniam?
+        </p>
+    </div>
+
+
+
+    <div class="feature-img">
+        <video src="/Jon-Vieira-SmartHelmet (trim).mp4" width="1000"></video>
+    </div>
+</div>
+
+
+
+
+
+
+
+
+    
+</div>
+
+</section>
+
 
 </main>
 
