Autoplay video at the hero section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <section id="hero">
 <div class="video-wrapper">
-    <video muted loop  src="./Jon-Vieira-SmartHelmet (trim).mp4"></video>
+    <video muted loop autoplay src="./Jon-Vieira-SmartHelmet (trim).mp4"></video>
 </div>
 
 <button class="button">
@@ -73,7 +73,7 @@
 
 
     <div class="feature-img">
-        <video src="/Jon-Vieira-SmartHelmet (trim).mp4" width="1000"></video>
+        <video src="/Jon-Vieira-SmartHelmet (trim).mp4" width="100%"></video>
     </div>
 </div>
 
@@ -88,7 +88,7 @@
 
 
     <div class="feature-img">
-        <video src="/Jon-Vieira-SmartHelmet (trim).mp4" width="1000"></video>
+        <video src="/Jon-Vieira-SmartHelmet (trim).mp4" width="100%"></video>
     </div>
 </div>
 
@@ -103,7 +103,7 @@
 
 
     <div class="feature-img">
-        <video src="/Jon-Vieira-SmartHelmet (trim).mp4" width="1000"></video>
+        <video src="/Jon-Vieira-SmartHelmet (trim).mp4" width="100%"></video>
     </div>
 </div>
 
@@ -118,7 +118,7 @@
 
 
     <div class="feature-img">
-        <video src="/Jon-Vieira-SmartHelmet (trim).mp4" width="1000"></video>
+        <video src="/Jon-Vieira-SmartHelmet (trim).mp4" width="100%"></video>
     </div>
 </div>
 
@@ -133,7 +133,7 @@
 
 
     <div class="feature-img">
-        <video src="/Jon-Vieira-SmartHelmet (trim).mp4" width="1000"></video>
+        <video src="/Jon-Vieira-SmartHelmet (trim).mp4" width="100%"></video>
     </div>
 </div>
 
@@ -148,7 +148,7 @@
 
 
     <div class="feature-img">
-        <video src="/Jon-Vieira-SmartHelmet (trim).mp4" width="1000"></video>
+        <video src="/Jon-Vieira-SmartHelmet (trim).mp4" width="100%"></video>
     </div>
 </div>
 
